--- a/frontend/index.html
+++ b/frontend/index.html
@@ -276,7 +276,7 @@
   </div>
 
   <script>
-    const API_URL = 'http://localhost:4000/api';
+    const API_URL = `${window.location.origin}/api`;
 
     function showTab(tabName) {
       document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
